Use future package for all parallel features
Future is the only parallel framework I know of that allows easy
specification of nested parallelism.

Old arguments like mc.cores are still accepted for
backward-compatibility, but have no effect.

Note that vignettes and some other documentation have not been updated
yet.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,8 +127,8 @@ importFrom(caret,trainControl)
 importFrom(caret,varImp)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
-importFrom(doParallel,registerDoParallel)
-importFrom(foreach,registerDoSEQ)
+importFrom(future,plan)
+importFrom(future.apply,future_lapply)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_wrap)
@@ -172,13 +172,8 @@ importFrom(matrixStats,rowSds)
 importFrom(matrixTests,col_oneway_welch)
 importFrom(matrixTests,row_wilcoxon_twosample)
 importFrom(methods,formalArgs)
+importFrom(methods,is)
 importFrom(pROC,roc)
-importFrom(parallel,clusterEvalQ)
-importFrom(parallel,clusterExport)
-importFrom(parallel,makeCluster)
-importFrom(parallel,mclapply)
-importFrom(parallel,parLapply)
-importFrom(parallel,stopCluster)
 importFrom(rlang,.data)
 importFrom(stats,as.formula)
 importFrom(stats,chisq.test)
@@ -209,3 +204,4 @@ importFrom(utils,setTxtProgressBar)
 importFrom(utils,stack)
 importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
+importFrom(withr,local_options)
