--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,19 +26,18 @@ Encoding: UTF-8
 Imports:
     caret,
     data.table,
-    doParallel,
-    foreach,
+    future,
+    future.apply,
     ggplot2,
     glmnet,
     matrixStats,
     matrixTests,
     methods,
-    parallel,
     pROC,
     Rfast,
-    RhpcBLASctl,
     rlang,
-    ROCR
+    ROCR,
+    withr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Suggests:
