Export the swapFoldIndex function
This is a useful function that should be generally available.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -109,6 +109,7 @@ export(smote)
 export(stat_filter)
 export(summary_vars)
 export(supervisedPCA)
+export(swapFoldIndex)
 export(train_preds)
 export(train_roc)
 export(train_summary)
