Use future for caret::train
This is done by calling doFuture::registerDoFuture() before running
caret::train() and then restoring the previous doPar backend
afterward.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,7 @@ importFrom(caret,trainControl)
 importFrom(caret,varImp)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
+importFrom(doFuture,registerDoFuture)
 importFrom(future,plan)
 importFrom(future.apply,future_lapply)
 importFrom(ggplot2,aes)
