--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ export(innercv_preds)
 export(innercv_roc)
 export(innercv_summary)
 export(lm_filter)
+export(local_registerDoFuture)
 export(mcc)
 export(mcc_multi)
 export(metrics)
@@ -128,6 +129,7 @@ importFrom(caret,varImp)
 importFrom(data.table,as.data.table)
 importFrom(data.table,rbindlist)
 importFrom(doFuture,registerDoFuture)
+importFrom(foreach,setDoPar)
 importFrom(future,plan)
 importFrom(future.apply,future_lapply)
 importFrom(ggplot2,aes)
